Update bert based code

--- a/bert_based_models.ipynb
+++ b/bert_based_models.ipynb
@@ -217,6 +217,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForMaskedLM: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Device set to use mps:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: cat (Confidence: 0.2298)\n",
+      "Predicted: dog (Confidence: 0.1143)\n",
+      "Predicted: bear (Confidence: 0.0780)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "# Load BERT fill-mask pipeline\n",
+    "fill_mask = pipeline(\"fill-mask\", model=\"bert-base-uncased\")\n",
+    "\n",
+    "# Test sentence with a masked word\n",
+    "sentence = \"The quick brown [MASK] jumps over the lazy dog.\"\n",
+    "\n",
+    "# Get BERT predictions\n",
+    "predictions = fill_mask(sentence)\n",
+    "\n",
+    "# Print top 3 predictions\n",
+    "for pred in predictions[:3]:\n",
+    "    print(f\"Predicted: {pred['token_str']} (Confidence: {pred['score']:.4f})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
